mobile layout first draft

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,12 +75,24 @@ nav .nav--options .nav--item {
   justify-content: space-evenly !important;
 }
 
+.dh-flex-center {
+  justify-content: center !important;
+}
+
 .dh-flex-col {
   flex-direction: column !important;
 }
 
 .dh-flex-left {
   align-items: flex-start !important;
+}
+
+.align-x {
+  align-items: center;
+}
+
+.dh-flex-row {
+  flex-direction: row !important;
 }
 
 .dh-mt-auto {
@@ -384,12 +396,28 @@ body {
   width: 50%;
 }
 
+footer {
+  background-color: var(--orange);
+}
+footer p {
+  font-size: 0.8em;
+  text-align: center;
+}
+
+.socials a:not(:last-child) {
+  padding-right: 1em;
+}
+.socials a img {
+  width: 1.6em;
+}
+
 .headshot {
   width: 48%;
 }
-.headshot::before {
-  content: "";
-  border: 1px solid var(--orange);
-  width: 48%;
-  height: 100%;
+
+.headshot-frame {
+  position: absolute;
+  transform: translateX(-13%) translateY(8%);
+  width: 47%;
+  z-index: -1;
 }
