--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -155,6 +155,18 @@ nav .nav--options .nav--item {
   padding: 0 10px !important;
 }
 
+.pad-y-1 {
+  padding: 10px 0px !important;
+}
+
+.p-top-1 {
+  padding-top: 10px !important;
+}
+
+.p-top-2 {
+  padding-top: 20px !important;
+}
+
 .flow-hide {
   overflow: hidden !important;
 }
@@ -221,7 +233,8 @@ li {
   height: 100px;
   line-height: 1.5em;
   padding-left: 1.3em;
-  margin: auto;
+  margin: 0;
+  max-width: 22em;
 }
 .list li::marker {
   content: "> ";
@@ -336,6 +349,11 @@ li {
   cursor: text;
 }
 
+@media only screen and (min-width: 820px) {
+  .terminal {
+    height: 320px;
+  }
+}
 .btn {
   width: 9rem;
   height: 2.375rem;
@@ -366,6 +384,10 @@ li {
 
 body {
   background-color: var(--black);
+}
+
+.antihero {
+  flex-direction: column;
 }
 
 .title--name h1 {
@@ -411,13 +433,106 @@ footer p {
   width: 1.6em;
 }
 
+.tagline {
+  font-size: 1.2em;
+  text-align: justify;
+}
+
 .headshot {
+  width: 147px;
+}
+
+.headshot--container {
+  margin: auto !important;
   width: 48%;
+  position: relative;
 }
 
 .headshot-frame {
   position: absolute;
-  transform: translateX(-13%) translateY(8%);
-  width: 47%;
+  transform: translateX(-48%) translateY(8%);
+  /* height: 66%; */
   z-index: -1;
+  top: 8px;
+  left: 39px;
+}
+
+@media only screen and (min-width: 520px) {
+  .tagline-container {
+    flex-direction: row;
+  }
+  .tagline {
+    padding-right: 26px;
+  }
+  .title--container {
+    align-items: flex-start;
+  }
+  .cta-group {
+    flex-direction: column;
+  }
+}
+.cta-group {
+  column-gap: 12px;
+}
+
+@media only screen and (min-width: 828px) {
+  .tagline-container {
+    flex-direction: column;
+  }
+  .antihero {
+    flex-direction: row;
+  }
+  .cta-group {
+    flex-direction: row;
+  }
+  .skills {
+    width: 33% !important;
+  }
+  .headshot-frame {
+    top: 25px;
+  }
+  .about-me {
+    width: 50% !important;
+  }
+}
+@media only screen and (min-width: 1100px) {
+  .cta-group {
+    flex-direction: column;
+    row-gap: 18px;
+    align-items: flex-end;
+  }
+  .tagline {
+    padding-right: 0;
+  }
+  .tagline p {
+    text-align: end;
+  }
+  .title--container {
+    align-items: flex-end;
+    padding-right: 0;
+  }
+  .antihero {
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+  }
+  .content--container {
+    max-width: 77vw;
+    margin: auto;
+  }
+  .nav--container {
+    max-width: 90vw;
+    margin: auto;
+  }
+  .about-me--container {
+    flex-direction: row;
+  }
+  .headshot--container {
+    width: 28% !important;
+  }
+  section.content.dh-flex.dh-flex-left {
+    flex-direction: row;
+  }
+  .about-me--headline {
+    font-size: 3em;
+  }
 }
