--- a/src/sass/util/_util.scss
+++ b/src/sass/util/_util.scss
@@ -152,6 +152,17 @@ nav {
   padding: 0 10px !important;
 }
 
+.pad-y-1 {
+  padding: 10px 0px !important;
+}
+
+.p-top-1 {
+  padding-top: 10px !important;
+}
+.p-top-2 {
+  padding-top: 20px !important;
+}
+
 .flow-hide {
   overflow: hidden !important;
 }
