added socials sidebar

--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -5,3 +5,4 @@
 @forward './util/animations';
 @forward './components/terminal.scss';
 @forward './components/buttons.scss';
+@forward './components/sidebar.scss';
