--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -382,8 +382,41 @@ li {
   font-weight: black;
 }
 
+.sidebar {
+  display: none;
+}
+
+@media only screen and (min-width: 600px) {
+  .sidebar {
+    display: block;
+    width: 45px;
+    height: 170px;
+    background-color: var(--orange);
+    position: sticky;
+    top: 250px;
+  }
+  .sidebar ul {
+    padding: 10px;
+  }
+  .sidebar li {
+    padding-bottom: 10px;
+  }
+  .sidebar li a img {
+    width: 20px;
+  }
+  .sidebar--container {
+    position: absolute;
+    width: 5%;
+    height: 100vh;
+    z-index: 999;
+  }
+}
 body {
   background-color: var(--black);
+}
+
+li {
+  list-style: none;
 }
 
 .antihero {
