--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -3,7 +3,7 @@
 body {
   background-color: var(--black);
 }
-li{
+li {
   list-style: none;
 }
 
@@ -94,6 +94,15 @@ footer {
   left: 39px;
 }
 
+.cta-group {
+  column-gap: 12px;
+}
+
+.content--container,
+.nav--container {
+  margin: auto;
+}
+
 @media only screen and (min-width: 520px) {
   .tagline-container {
     flex-direction: row;
@@ -109,8 +118,11 @@ footer {
   }
 }
 
-.cta-group {
-  column-gap: 12px;
+@media only screen and (min-width: 728px) {
+  .content--container {
+    max-width: 88vw;
+    margin: auto;
+  }
 }
 
 @media only screen and (min-width: 828px) {
