--- a/public/css/components/sidebar.css
+++ b/public/css/components/sidebar.css
@@ -2,17 +2,18 @@
   display: none;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 730px) {
   .sidebar {
     display: block;
-    width: 45px;
-    height: 170px;
     background-color: var(--orange);
     position: sticky;
     top: 250px;
   }
   .sidebar ul {
     padding: 10px;
+  }
+  .sidebar li:last-child {
+    padding-bottom: 0;
   }
   .sidebar li {
     padding-bottom: 10px;
@@ -22,7 +23,6 @@
   }
   .sidebar--container {
     position: absolute;
-    width: 5%;
     height: 100vh;
     z-index: 999;
   }
