--- a/src/sass/components/sidebar.scss
+++ b/src/sass/components/sidebar.scss
@@ -1,11 +1,11 @@
 .sidebar {
   display: none;
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 730px) {
   .sidebar {
     display: block;
-    width: 45px;
-    height: 170px;
+    // width: 45px;
+    // height: 170px;
     background-color: var(--orange);
     position: sticky;
     top: 250px;
@@ -13,6 +13,9 @@
       padding: 10px;
     }
 
+    & li:last-child {
+      padding-bottom: 0;
+    }
     & li {
       padding-bottom: 10px;
       & a img {
@@ -23,7 +26,7 @@
 
   .sidebar--container {
     position: absolute;
-    width: 5%;
+    // width: 5%;
     height: 100vh;
     z-index: 999;
   }
