--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -232,7 +232,7 @@ li {
   flex-wrap: wrap;
   height: 100px;
   line-height: 1.5em;
-  padding-left: 1.3em;
+  padding-left: 0.3em;
   margin: 0;
   max-width: 22em;
 }
@@ -453,6 +453,7 @@ li {
 
 footer {
   background-color: var(--orange);
+  padding: 0;
 }
 footer p {
   font-size: 0.8em;
