--- a/src/sass/util/_util.scss
+++ b/src/sass/util/_util.scss
@@ -143,6 +143,10 @@ nav {
   width: 100% !important;
 }
 
+.w-50 {
+  width: 50% !important;
+}
+
 // padding
 .pad-x-1-half {
   padding: 0 5px !important;
