--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -66,7 +66,7 @@ footer {
 }
 
 .tagline {
-  font-size: 1.2em;
+  font-size: 1em;
   text-align: justify;
 }
 
@@ -104,7 +104,10 @@ footer {
 }
 
 .cta-group {
-  column-gap: 12px;
+  // column-gap: 12px;
+  flex-direction: column;
+  row-gap: 13px;
+  align-items: center;
 }
 
 .content--container,
@@ -116,14 +119,16 @@ footer {
   .tagline-container {
     flex-direction: row;
   }
-  .tagline {
-    padding-right: 26px;
-  }
+  // .tagline {
+  //   padding-right: 26px;
+  // }
   .title--container {
     align-items: flex-start;
   }
   .cta-group {
     flex-direction: column;
+    row-gap: 13px;
+    align-items: flex-end;
   }
 }
 
@@ -139,12 +144,17 @@ footer {
     flex-direction: column;
     // align-items: flex-start;
   }
+
+  .title--container {
+    width: 33%;
+  }
+
   .antihero {
     flex-direction: row;
   }
-  .cta-group {
-    flex-direction: row;
-  }
+  // .cta-group {
+  //   flex-direction: row;
+  // }
   .skills {
     width: 75% !important;
   }
@@ -183,6 +193,7 @@ footer {
   .title--container {
     align-items: flex-end;
     padding-right: 0;
+    width: 100%;
   }
 
   .antihero {
@@ -211,7 +222,7 @@ footer {
   .about-me--headline {
     font-size: 3em;
   }
-  
+
   .about-me {
     width: 50% !important;
   }
