--- a/src/sass/util/_util.scss
+++ b/src/sass/util/_util.scss
@@ -160,11 +160,17 @@ nav {
   padding: 10px 0px !important;
 }
 
+.pt-0 {
+  padding-top: 0px !important;
+}
 .p-top-1 {
   padding-top: 10px !important;
 }
 .p-top-2 {
   padding-top: 20px !important;
+}
+.pl-0 {
+  padding-left: 0px !important;
 }
 
 .flow-hide {
