--- a/src/sass/noodles/components/_sidebar.scss
+++ b/src/sass/noodles/components/_sidebar.scss
@@ -1,3 +1,5 @@
+@use "../util/" as *;
+
 .sidebar {
   display: none;
 }
@@ -6,7 +8,7 @@
     display: block;
     // width: 45px;
     // height: 170px;
-    background-color: var(--orange);
+    background-color: $orange;
     position: sticky;
     top: 250px;
     & ul {
