--- a/src/sass/util/_util.scss
+++ b/src/sass/util/_util.scss
@@ -8,33 +8,10 @@ body {
   margin: auto;
 }
 
-.content {
-  justify-content: center;
-  position: relative;
-  flex-direction: column;
-  align-items: center;
-  // margin-bottom: 1em;
-  padding: 0 0.8em;
-}
 
-.container {
-  display: flex;
-  flex-direction: column;
-  padding: 1em;
-}
-
-// NAVBAR
-nav {
-  justify-content: space-between;
-
-  & .nav--options {
-    justify-content: space-evenly;
-    margin: auto 0;
-    & .nav--item {
-      padding: 0 10px;
-      font-size: 0.9em;
-    }
-  }
+.content--container,
+.nav--container {
+  margin: auto;
 }
 
 // alignment systems
