--- a/src/sass/noodles/components/_navbar.scss
+++ b/src/sass/noodles/components/_navbar.scss
@@ -9,21 +9,19 @@
     font-size: $font-size-lg;
   }
 
-  & .navbar--options {
+  & .navbar__options {
     justify-content: space-evenly;
     margin: auto 0;
-    & .navbar--item {
+    & .navbar__item {
       padding: 0 10px;
       font-size: 0.9em;
     }
   }
 }
 
-.navbar--item {
-}
 
 @media only screen and (min-width: 1100px) {
-  .navbar--container {
+  .navbar__container {
     max-width: 90vw;
     margin: auto;
   }
