--- a/src/sass/noodles/util/_util.scss
+++ b/src/sass/noodles/util/_util.scss
@@ -1,4 +1,6 @@
+@use "sass:list";
 @use "./variables" as *;
+@use "./fonts" as *;
 
 *,
 *::after,
@@ -9,7 +11,7 @@
 }
 
 body {
-  font-family: var(--primary-font);
+  font-family: $font-primary;
 }
 
 section {
@@ -17,9 +19,16 @@ section {
   // width: 98vw;
 }
 
-ul {
+ul,
+ol {
   padding: 0;
   list-style-type: none;
+}
+
+ul,
+ol,
+li {
+  list-style: none;
 }
 
 a {
@@ -35,44 +44,6 @@ img {
   // max-width: 100%;
 }
 
-.list {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: 100px;
-  line-height: 1.5em;
-  padding-left: 1.3em;
-  // padding-left: 0.3em;
-  margin: 0;
-  max-width: 22em;
-
-  & li::marker {
-    content: "> ";
-  }
-}
-
-.paragraph {
-  margin-top: 0;
-  &::first-letter {
-    // --webkit-initial-letter: 2;
-    // initial-letter: 2;
-    font-size: 2em;
-    font-weight: bold;
-  }
-  &::before {
-    content: "";
-    // border: solid 2px;
-    width: 2em;
-    background-color: var(--orange);
-    display: block;
-    height: 2.6em;
-    position: absolute;
-    z-index: -1;
-    transform: translateX(-11px) translateX(0px);
-    // animation: blink 1s linear infinite;
-  }
-}
-
 // generate utility classes
 @each $property, $map in $utilities {
   $prefix: map-get($map, "prefix");
@@ -86,6 +57,19 @@ img {
     } @else {
       .#{$prefix}-#{$k} {
         #{$property}: $v;
+      }
+
+      // @debug $v;
+      @if (map-has-key($alignment, $property)) {
+        @if ($v != 0) {
+          .#{$prefix}-x-#{$k} {
+            #{$property}: 0 $v;
+          }
+
+          .#{$prefix}-y-#{$k} {
+            #{$property}: $v 0;
+          }
+        }
       }
     }
   }
