--- a/src/sass/noodles/util/_typography.scss
+++ b/src/sass/noodles/util/_typography.scss
@@ -23,6 +23,12 @@ h1 {
   margin-bottom: $base-margin;
 }
 
-.nowrap{
+.nowrap {
   text-wrap: nowrap;
+}
+
+@each $family, $property in $fonts {
+  .#{$family} {
+    font-family: #{$property};
+  }
 }
