--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -8,17 +8,17 @@ li {
   list-style: none;
 }
 
-.antihero {
-  flex-direction: column;
-}
+// .antihero {
+//   flex-direction: column;
+// }
 
 //HERO SECTION
 .title__name {
   & h1 {
     font-family: $font-secondary;
-    font-size: 2.6em;
-    font-weight: 900;
-    margin: 13% 0 0 0;
+    // font-size: 2.6em;
+    // font-weight: 900;
+    // margin: 13% 0 0 0;
   }
 }
 
@@ -29,15 +29,15 @@ li {
 }
 
 .title__smiley {
-  margin-top: 16%;
-  margin-left: -4%;
+  margin-top: 8%;
+  // margin-left: -4%;
 }
 
 .about-me__headline {
   font-family: $font-chintzy;
   letter-spacing: 0.6rem;
   word-spacing: -0.5em;
-  font-size: 1.8rem;
+  font-size: $font-size-xxl;
 }
 
 .skills ul li {
@@ -117,9 +117,9 @@ footer {
   // .tagline {
   //   padding-right: 26px;
   // }
-  .title__container {
-    align-items: flex-start;
-  }
+  // .title__container {
+  //   align-items: flex-start;
+  // }
   .cta-group {
     flex-direction: column;
     row-gap: 13px;
@@ -144,9 +144,9 @@ footer {
     width: 33%;
   }
 
-  .antihero {
-    flex-direction: row;
-  }
+  // .antihero {
+  //   flex-direction: row;
+  // }
   // .cta-group {
   //   flex-direction: row;
   // }
@@ -191,10 +191,10 @@ footer {
     width: 100%;
   }
 
-  .antihero {
-    display: grid;
-    grid-template-columns: 4fr 2fr;
-  }
+  // .antihero {
+  //   display: grid;
+  //   grid-template-columns: 4fr 2fr;
+  // }
 
   .content--container {
     max-width: 77vw;
